# .CWScript-old

./: CWScript.g4  README.md  ast.py  pyproject.toml  spec.md  test.py  test_contract.cws  typesystem.py
.antlr/: CWScript.interp  CWScriptLexer.interp  CWScriptLexer.java  CWScriptLexer.tokens  CWScriptParser.java
cw20-base/: Cargo.toml
cwscript/: __init__.py  _ast.py  ast_nodes.py  codegen.py  compiler.py  grammar.lark  main.py  model.py  parser.py  rust.py  symbolic.py  template.py  test.py  test_contract.cws
cwscript/cwsls/: server.py
cwscript/lang/: ast.py  ast_nodes.py  codegen.py  grammar.lark  model.py  parser.py
cwscript/lang/templates/: contract.rs.jinja  errors.rs.jinja  events.rs.jinja
cwscript/util/: context_env.py  strings.py
cwsls/: server.py
docs/: docusaurus.config.js  package.json  sidebars.js
docs/docs/devguide/: architecture.md  intro.md
docs/docs/manual/: intro.md  syntax.md
docs/docs/manual/lang/: contracts.md  events.md  file_layout.md  instantiate.md  structure.md
docs/docs/manual/ref/: grammar.md
docs/docs/tutorial/: intro.md
docs/examples/cw20-base/: cw20base.cws
docs/examples/demo1/: test_contract.cws
docs/src/css/: custom.css
examples/: antlr.cws  test_contract.cws
examples/cw20-base/: cw20-base.cws  cw20.cws  cw20base.cws
examples/utilities/: if_exec.cws
grammar/: CWScript.g4
grammar/.antlr/: CWScript.interp  CWScriptLexer.interp  CWScriptLexer.java  CWScriptLexer.tokens  CWScriptParser.java
output_dir/: Cargo.toml  rustfmt.toml
rustfmt-py/: Cargo.toml
rustfmt-py/src/: lib.rs
templates/codegen/: contract  enum  errors_enum  events_enum  exec-fn  execute_msg_enum  if-expr  instantiate_msg_struct  msgs  set-state-item  set-state-map  set-variable  struct_defn
templates/contract_crate/: Cargo.toml
templates/contract_crate/.cargo/: config
templates/contract_crate/src/: contract.rs  msg.rs
tests/: test_cwscript.py
(+3 files in other folders)
