[tool.poetry]
name = "cwscript"
version = "0.1.0"
description = ""
authors = ["William Chen <william@terran.one>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
