[package]
name = "rustfmt-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfmt = "*"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[lib]
name = "rustfmt_py"
crate-type = ["cdylib"]
